# conan-gui

./: .clang-format  .gitignore  CMakeLists.txt  CMakeLists.txt.user.4.10-pre1  README.md  conanfile.txt
.github/workflows/: pipeline.yml
cmake/: conangui_add_test.cmake
deploy/: deploy.py  deploy_qt.cmake
interface/: CMakeLists.txt
interface/include/interfaces/: iconan.h  imainview.h  iprocess.h  isettings.h
qtimpl/: CMakeLists.txt
qtimpl/resource/: resource.qrc
qtimpl/src/qt/: graphic_event_loop.cpp  graphic_event_loop.h  main_view.cpp  main_view.h  main_view.ui  process.cpp  process.h  remote_list_model.cpp  remote_list_model.h  settings.h
resource/: resource.qrc
src/: conan.cpp  conan.h  conangui.cpp  conangui.h  main.cpp  resource.rc  util.cpp  util.h
src/qt/: main_view.cpp  main_view.h  main_view.ui
test/: mock.h  test_conan_acceptance.cpp  test_conan_api.cpp  test_game_logic.cpp
